# sev-micro-loader

./: .gitignore  Cargo.toml  Dockerfile.reproducible  LICENSE  README.md  build_kernel.sh  build_reproducible.sh  q35-sev-snp-unikernel.xml  test_config.sh
.github/workflows/: release.yml
docs/: architecture.md  loader_security.md  reproducible_builds.md  threat_model.md
src/: attestation.rs  config.rs  crypto.rs  dns.rs  main.rs  system.rs  time.rs
