[package]
name = "sev-micro-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pure Rust async runtime and network client
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "time", "net", "io-util", "signal", "process", "full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
mimalloc = { version = "*", features = ["secure"] }

# Embedded TLS root certificates (Mozilla CA store baked into the binary)
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
webpki-roots = "1.0"

# Cryptography and Hashing (FIPS validated)
aws-lc-rs = { version = "1.17", features = ["fips"] }
base64ct = { version = "1.8.3", features = ["alloc"] }
base16ct = { version = "1.0.0", features = ["alloc"] }

# Low-level Linux system calls for mounting filesystems, ioctl, fork
nix = { version = "0.31", features = ["fs", "mount", "process"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
